fixed sticky notes and overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,6 @@ h3,
 
 .work {
 	width: 274px;
-	overflow: auto;
 	position: relative;
 	float: left;
 	margin: 20px 0 25px;
